2009-08-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Initialize variable properly.
	* src/cfsqp.c: Here.

2009-08-30  Thomas Moulard  <thomas.moulard@gmail.com>

	Generate tests output.
	Regenerate tests output as roboptim-core has been modified
	to display whether constraints are satisfied at starting point.
	* tests/plugin.stdout,
	* tests/simple.stdout: Regenerate.

2009-08-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Update to new SourceForge URLs.
	* .gitmodules: Update to new URLs.
	* bootstrap: Detect new alias.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Dispay more information in gradient checking mode.
	* src/roboptim-core-cfsqp-plugin.cc: Display constraint id
	or cost function if gradient checking fail.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Add Visual Studio project and solution.
	* msvc/roboptim-core-plugin-cfsqp/config.h: New.
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-cfsqp-plugin.sln: New.
	* msvc/roboptim-core-plugin-cfsqp/roboptim-core-plugin-cfsqp.vcproj: New.
	* msvc/simple/simple.vcproj: New.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Tag plug-in hooks functions as exportable for Windows compatbility.
	* src/roboptim-core-cfsqp-plugin.cc: Here.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Change default iteration number.
	* src/roboptim-core-cfsqp-plugin.cc: Here.
	* tests/optimization-problem-1.stdout,
	* tests/plugin.stdout,
	* tests/simple-1.stdout,
	* tests/simple-2.stdout,
	* tests/simple.stdout: Regenerate.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix Windows compatbility problems.
	* src/roboptim-core-cfsqp-plugin.cc:
	Allocate dynamically the arrays CFSQP has to use as
	Visual Studio fail to compile if their size is not
	known at compile-time, add desallocation code and
	replace bzero usage by memset which is more portable.

2009-08-17  Thomas Moulard  <thomas.moulard@gmail.com>

	Mark class as exportable for Windows compatibility.